--- a/web publishing_portfolio/00_potfolio/index.html
+++ b/web publishing_portfolio/00_potfolio/index.html
@@ -96,7 +96,7 @@
                     <h4>01</h4>
                     <h2>MARHEN.J</h2>
                     <h3>Site Renewal Design</h3>
-                    <a href="./01/index.html">SITE VIEW <img src="img/arrow.png" alt=""></a>
+                    <a href="../01/index.html">SITE VIEW <img src="img/arrow.png" alt=""></a>
                 </div>
                 <table>
                     <tr>
@@ -145,7 +145,7 @@
                     <h4>02</h4>
                     <h2>망원동 티라미수</h2>
                     <h3>Site Renewal Design</h3>
-                    <a href="./02/index.html">SITE VIEW <img src="img/arrow.png" alt=""></a>
+                    <a href="../02/index.html">SITE VIEW <img src="img/arrow.png" alt=""></a>
                 </div>
 
                 <table>
@@ -196,7 +196,7 @@
                     <h4>03</h4>
                     <h2>Little nightmares</h2>
                     <h3>Site Renewal Design</h3>
-                    <a href="./03/index.html">SITE VIEW <img src="img/arrow.png" alt=""></a>
+                    <a href="../03/index.html">SITE VIEW <img src="img/arrow.png" alt=""></a>
                 </div>
 
                 <table>
