--- a/web publishing_portfolio/02/index.html
+++ b/web publishing_portfolio/02/index.html
@@ -51,8 +51,8 @@
             <img class="bg1" src="img/bg/G_bg1.png" alt="">
             <img class="bg2" src="img/bg/G_bg2.png" alt="">
             <img class="bg3" src="img/bg/G_bg3.png" alt="">
-            <img class="bg4" src="img/bg/G_bg4.png" alt="">
-            <img class="bg5" src="img/bg/G_bg5.png" alt="">
+           <!-- <img class="bg4" src="img/bg/G_bg4.png" alt="">
+            <img class="bg5" src="img/bg/G_bg5.png" alt=""> -->
             <img class="bg6" src="img/bg/G_bg6.png" alt="">
             <img class="bg7" src="img/bg/G_bg7.png" alt="">
             <img class="bg8" src="img/bg/G_bg8.png" alt="">
