--- a/Keyframe.html
+++ b/Keyframe.html
@@ -17,7 +17,7 @@
 	width:1138px;
 	height:712px;
 	background:#000;
-	background: url(https://s3.us-west-2.amazonaws.com/secure.notion-static.com/b6714ed3-3b44-4aa2-9ea2-635b1a255292/%EB%8B%A4%EC%9A%B4%EB%A1%9C%EB%93%9C.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20220402%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20220402T134309Z&X-Amz-Expires=86400&X-Amz-Signature=8668afc1945cbfa12f8f89ef7b13d063e18942c8c3cf269afe48c3c5b366fec0&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22%25EB%258B%25A4%25EC%259A%25B4%25EB%25A1%259C%25EB%2593%259C.png%22&x-id=GetObject);
+	background: url(...);
 	background-repeat:no-repeat;
 	background-size:1200px auto;
 	background-position:top -70px left -10px;
