--- a/web publishing_portfolio/01/index.html
+++ b/web publishing_portfolio/01/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="MARHEN.J">   
-    <meta property="og:url" content="http://jinaj777.dothome.co.kr/mar">   
-    <meta property="og:type" content="">
-    <meta property="og:image" content="http://jinaj777.dothome.co.kr/mar/title.png">  
+    <!-- <meta property="og:url" content="http://jinaj777.dothome.co.kr/mar">    -->
+    <!-- <meta property="og:type" content=""> -->
+    <!-- <meta property="og:image" content="http://jinaj777.dothome.co.kr/mar/title.png">   -->
     <meta property="og:site_name" content="MARHEN.J">  
     <meta property="og:description" content="MARHEN.J____">   
 
